<resources>
    <string name="app_name">Book Store</string>
    <string name="empty_view_title_text">There are no books&#8230;</string>
    <string name="empty_view_subtitle_text">Get started by adding a book.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_insert_dummy_data">Insert dummy data</string>
    <string name="action_delete_all_entries">Delete all books</string>
    <string name="sale_button">Sale</string>
    <string name="quantity_word">Quantity: </string>
    <string name="dollar_symbol">$</string>
    <string name="book_detail">Book detail</string>
    <string name="editor_activity_title_new_book">Add a book</string>
    <string name="editor_activity_title_edit_book">Edit book</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="category_author">Author</string>
    <string name="category_book_name">Book name</string>
    <string name="category_book_price">Price</string>
    <string name="category_book_quantity">Quantity</string>
    <string name="category_book">Book</string>
    <string name="category_book_supplier">Supplier</string>
    <string name="category_book_supplier_name">Name</string>
    <string name="category_book_supplier_phone_number">Phone number</string>
    <string name="minus_symbol">-</string>
    <string name="plus_symbol">+</string>
    <string name="decrease_quantity_not_number">Quantity can be only an integer number</string>
    <string name="insert_book_failed">Error with saving book</string>
    <string name="insert_book_successful">Book saved</string>
    <string name="update_book_failed">Error with updating book</string>
    <string name="update_book_successful">Book updated</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep editing</string>
    <string name="delete_dialog_msg">Delete this book?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="editor_delete_book_failed">Error with deleting book</string>
    <string name="editor_delete_book_successful">Book deleted</string>
    <string name="category_book_price_hint">$00.00</string>
    <string name="sale_book">Sale book!</string>
    <string name="phone_call">Phone call</string>
    <string name="fill_all_fields">Fiil all fields</string>
    <string name="check_quantity">Quantity must be higher than 0.</string>
    <string name="sale_book_error">Error with book sale.</string>
</resources>
