<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".DetailActivity">

    <!-- Book category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_book"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!-- Author field -->
            <EditText
                android:id="@+id/edit_book_author"
                android:hint="@string/category_author"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

            <!-- Book name field -->
            <EditText
                android:id="@+id/edit_book_name"
                android:hint="@string/category_book_name"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />
        </LinearLayout>
    </LinearLayout>


    <!-- Price category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_book_price"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!-- Price field -->
            <EditText
                android:id="@+id/edit_book_price"
                android:hint="@string/category_book_price"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />
        </LinearLayout>
    </LinearLayout>

    <!-- Quantity category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_book_quantity"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="horizontal">

            <!-- Button minus -->
            <Button
                android:id="@+id/btn_minus"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/minus_symbol"
                android:textSize="22sp"
                android:onClick="decreaseQuantity"/>

            <!-- Quantity field -->
            <TextView
                android:id="@+id/view_book_quantity"
                android:text="0"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                style="@style/TextFieldStyle" />

            <!-- Button plus -->
            <Button
                android:id="@+id/btn_plus"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/plus_symbol"
                android:textSize="22sp"
                android:onClick="increaseQuantity"/>
        </LinearLayout>
    </LinearLayout>

    <!-- Supplier category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_book_supplier"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!-- Supplier name field -->
            <EditText
                android:id="@+id/edit_supplier_name"
                android:hint="@string/category_book_supplier_name"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

            <!-- Supplier phone number field -->
            <EditText
                android:id="@+id/edit_supplier_phone_number"
                android:hint="@string/category_book_supplier_phone_number"
                android:inputType="phone"
                style="@style/EditorFieldStyle" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>